# Contextcore

./: .flake8  .gitignore  .pep8  INSTALL.md  MCP_INTEGRATION.md  README.md  UI_PREVIEW.md  auth_manager.py  config.py  contextcore.example.yaml  debug_video_extraction.py  detect_paths.py  install.ps1  install.sh  mcp_registration.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  rclone_service.py  register_mcp.py  requirements.optional.txt  requirements.txt  run_index_pipeline.py  run_tests.py  setup.py  test_deletion_tracking.py  test_implementation.py  test_video_indexing.py  unimain.py
.github/workflows/: ci.yml
.husky/: pre-commit
Connectors/: Connectors.py  __init__.py  store.py
activity/: __init__.py  recent_sync.py  search_analytics.py
audio_search_implementation_v2/: __init__.py  audio_index.py  scanner.py  worker.py
benchmarks/: scifact_compare.md
cli/: __init__.py  constants.py  env.py  lifecycle.py  main.py  paths.py  server.py  strings.py  ui.py
cli/commands/: benchmark.py  cloudconnect.py  clouddisconnect.py  doctor.py  helpers.py  init.py  init_ui.py  report.py  search.py  status.py  update.py
cloud_text_search_implementation/: __init__.py  annoy_store.py  config.py  db.py  embeddings.py  index_worker.py  search.py  test_db.py
core/: __init__.py  sdk.py
image_search_implementation_v2/: __init__.py  annoy_store.py  config.py  db.py  embedder.py  index_worker.py  main.py  ocr.py  query_worker.py  search.py  vector_store.py
index_controller/: __init__.py  ignore.py  thumbnail_manager.py
scripts/: publish_pypi.ps1
tests/: __init__.py  conftest.py  test_all.py  test_connectors.py  test_gaps.py  test_indexing.py.broken  test_status_dashboard.py  test_text_search_v2.py
text_search_implementation_v2/: __init__.py  config.py  db.py  extract.py  index_controller.py  index_worker.py  main.py  search.py
video_search_implementation_v2/: __init__.py  runtime.py  video_index.py  watcher.py
