[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextcore"
version = "0.1.0"
description = "Unified local search and indexing for Claude and other AI tools"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mcp[cli]",
    "sqlite-vec",
    "pypdf",
    "typer",
    "rich",
    "questionary",
    "watchdog",
    "requests",
    "numpy",
    "Pillow",
    "rapidfuzz",
    "annoy",
    "openpyxl",
    "xlrd",
    "odfpy",
]

[project.optional-dependencies]
vision = ["torch", "torchvision", "transformers"]
audio  = ["faster-whisper"]
all    = ["torch", "torchvision", "transformers", "faster-whisper"]
dev = [
    "pytest",
    "pytest-timeout",
]

[project.scripts]
contextcore = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::pytest.PytestConfigWarning"]
