[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextcore"
version = "1.0.0"
description = "Unified local search and indexing for Claude and other AI tools"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
keywords = ["mcp", "contextcore", "search", "indexing", "claude", "retrieval", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mcp[cli]",
    "sqlite-vec",
    "pypdf",
    "typer",
    "rich",
    "questionary",
    "watchdog",
    "requests",
    "numpy",
    "Pillow",
    "rapidfuzz",
    "annoy",
    "openpyxl",
    "xlrd",
    "odfpy",
]

[project.optional-dependencies]
vision = ["torch", "torchvision", "transformers"]
audio  = ["faster-whisper"]
all    = ["torch", "torchvision", "transformers", "faster-whisper"]
dev = [
    "pytest",
    "pytest-timeout",
    "build",
    "twine",
]

[project.scripts]
contextcore = "cli.main:main"

[project.urls]
Homepage = "https://github.com/lucifer-ux/SearchEmbedSDK"
Repository = "https://github.com/lucifer-ux/SearchEmbedSDK"
Issues = "https://github.com/lucifer-ux/SearchEmbedSDK/issues"

[tool.setuptools]
include-package-data = true
py-modules = [
    "auth_manager",
    "config",
    "detect_paths",
    "mcp_registration",
    "mcp_server",
    "rclone_service",
    "register_mcp",
    "run_index_pipeline",
    "unimain",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "activity*",
    "audio_search_implementation_v2*",
    "cli*",
    "core*",
    "image_search_implementation_v2*",
    "index_controller*",
    "text_search_implementation_v2*",
    "video_search_implementation_v2*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::pytest.PytestConfigWarning"]
